src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


/*
 * Legal Disclaimer for Basic Package licence
 * Basic Licence Package with limited parameters.
 * Should the license page views limit be exceeded the license holder will be required to contact Lineto.com for an upgrade.
 * It is strictly prohibited to rename the font and to download or use these fonts in any other media.
 * These Web fonts are licensed exclusively for the use on the following domain(s) and their subdomains: lauragauch.com
 * , up to 5k monthly page viewsFor up to 5k followers on all social media channels belonging to Laura Gauch
 */

/* complete */
@font-face {
  font-family: "GeigyLLRegular";
  src: url("assets/GeigyLLWeb-Regular.woff") format("woff");
}

@font-face {
  font-family: "GeigyLLRegular";
  src: url("assets/GeigyLLWeb-Regular.woff2") format("woff2");
}

@font-face {
  font-family: "TimesTen";
  src: url("assets/TimesTenLTStd-Roman.otf") format("opentype");
}

a {
  @apply hover:underline underline-offset-2
}

figure img {
  @apply h-full w-auto object-contain;
}

.video-responsive {
  position: relative;
  height: 24rem;
  width: calc(24rem * 16 / 9);
}

.videoindex {
  position: relative;
  height: 15rem;
  width: calc(15rem * 16 / 9);
}

@media (max-width: 1023px) {
  .video-responsive {
    position: relative;
    height: 13rem;
    width: calc(13rem * 16 / 9);
  }

  .videoindex {
    position: relative;
    height: 8rem;
    width: calc(8rem * 16 / 9);
  }
}

.embed-container {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
}

.embed-container iframe,
.embed-container object,
.embed-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

a {
  cursor: crosshair;
}

